FSA-69: Larger checkboxes on mobile, search overflow fixed

--- a/drupal/web/themes/custom/fsa/src/css/establishment.css
+++ b/drupal/web/themes/custom/fsa/src/css/establishment.css
@@ -73,4 +73,5 @@
 
 .establishment__authority-content {
   display: inline-block;
+  word-break: break-word;
 }
